# advent-of-code-2021

./: .gitignore  README.md  pyproject.toml
advent_of_code_2021/: CMakeLists.txt
advent_of_code_2021/day1/: day1  main.cpp  sonar_sweep.py
advent_of_code_2021/day10/: syntax_scoring.py
advent_of_code_2021/day11/: dumbo_octopus.py
advent_of_code_2021/day12/: passage_pathing.py
advent_of_code_2021/day13/: transparent_origami.py
advent_of_code_2021/day14/: extended_polymerization.py
advent_of_code_2021/day2/: dive.py
advent_of_code_2021/day3/: binary_diagnostics.py
advent_of_code_2021/day4/: giant_squid.py
advent_of_code_2021/day5/: hydrothermal_vents.py
advent_of_code_2021/day6/: lanternfish.py
advent_of_code_2021/day7/: whale.py
advent_of_code_2021/day8/: seven_segment_search.py
advent_of_code_2021/day9/: smoke_basin.py
