[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = "Advent of code 2021: https://adventofcode.com/2021/"
authors = ["morten.aslesen <mortendaehli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
